src/app/pages/user-locator/user-locator.page.scss
.hideShowToolbarBtn {
  margin: 0px;  
}

ion-button.hideShowToolbarBtn::part(native) {
  padding-top: 0px;
  padding-bottom: 0px;
}

.lynx-toolbar {
  background: var(--lynxPink);
}

#origin-search-container,
#destination-search-container,
responsive-datepicker,
responsive-timepicker {
  width: 100%;
}

  #user-locator-map-canvas{
    width: 100%;
    height: 100%;
  }

  #find-services-button-container,
  #find-transportation-button-container {
    //padding: size(2);
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    //width: 100%;
    z-index: 500;

    // #find-services-button,
    // #find-transportation-button {
    //    padding-right: size(1);
    //    ion-icon {
    //      margin-left: size(1);
    //    }
    // }
  }

  ion-col {
    --ion-background-color: var(--lynxPink);
  }

  ion-item.radio-wrapper {
    width: 100%;
    --ion-background-color: var(--lynxWhite);
  }

  ion-item.radio-wrapper.ion-focused ion-radio {
    --color-checked: var(--lynxDkOrange);
    font-size: large;
    font-weight: bolder;
  }

  ion-list.radio-wrapper {
    padding-top: 0px;
    padding-bottom: 0px;
  }

  .label-stacked {
    transform: none;//undo the ionic transform for stacked labels (made it tiny)
  }

  //make sure the Destination label has text pushed to bottom
  #Destination {
    display: flex; 
    align-items: flex-end;
  }

  div.swap-button {
    display: flex; 
    justify-content: space-between;
  }

  ion-select {
    padding: 10px;
    background-color: var(--lynxWhite);
    --highlight-color-focused: var(--lynxPink);
    --highlight-color-invalid: var(--lynxPink);
    --highlight-color-valid: var(--lynxPink);

    &:focus {
      outline: solid;
      outline-color: var(--lynxPink);
      outline-offset: -3px;
      outline-width: 2px;
    }
  }


  // ion-select#arriveBySelector .select-text {
  //   width: -webkit-fill-available;
  // }

